--- a/src/css/partials/layout.css
+++ b/src/css/partials/layout.css
@@ -45,6 +45,10 @@ a:focus {
 
 .container {
   overflow: auto;
+
+  &.hidden {
+    overflow: hidden;
+  }
 }
 
 div, a, span {
